# tidata

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
mcp/: README.md
tests/: test_ticker.py
tidata/: __init__.py
tidata/tifinance/: __init__.py  exceptions.py  ticker.py
trading_data/: __init__.py  client.py  exceptions.py
