[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-data-py"
version = "0.1.0"
description = "Python client for the TradeInsight Trading Data Service API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/tradeinsight/trading-data-py"
"Bug Tracker" = "https://github.com/tradeinsight/trading-data-py/issues"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov", "responses>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_data*"]
