[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidata"
version = "0.1.0"
description = "Python client for the TradeInsight API — yfinance-compatible Ticker.history()"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/TradeInsight-Info/tidata"
"Bug Tracker" = "https://github.com/TradeInsight-Info/tidata/issues"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov", "responses>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tidata*"]
